--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "comentaki",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^5.0.12",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "firebase": "^10.8.1",
@@ -13,8 +14,11 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0"
+    "sonner": "^1.4.41",
+    "sort-by": "^1.2.0",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "dev": "vite",
