--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "comentaki",
   "version": "2.0.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -19,11 +25,6 @@
     "sonner": "^1.4.41",
     "sort-by": "^1.2.0",
     "zod": "^3.22.4"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
